# ebisu-ink

./: .gitignore  Cargo.toml  README.md  index.html  lib.rs  package-lock.json  package.json  vite.config.js
contract/: Cargo.toml  lib.rs
frontend/: deposit.html  index.html  message.json  package-lock.json  package.json  script.js
frontend/src/: App.svelte  main.js
frontend/src/functions/: AcceptOffer.svelte  AssetBalance.svelte  AuctionHistory.svelte  CancelAuction.svelte  CreateAuction.svelte  CreateBid.svelte  DepositAsset.svelte  DepositNft.svelte  GetAuctionList.svelte  GetBidList.svelte  GetCollateral.svelte  GetLoanList.svelte  LoanHistory.svelte  PayLoan.svelte  WithdrawAsset.svelte  WithdrawNft.svelte
frontend/src/pages/: Auction.svelte  AuctionHistory.svelte  AuctionInfo.svelte  HomePage.svelte  LoanHistory.svelte  LoanInfo.svelte
src/: App.svelte  main.js  stores.js
src/functions/: AcceptOffer.svelte  AssetBalance.svelte  AuctionHistory.svelte  CancelAuction.svelte  CreateAuction.svelte  CreateBid.svelte  DepositAsset.svelte  DepositNft.svelte  GetAuctionList.svelte  GetBidList.svelte  GetCollateral.svelte  GetLoanList.svelte  LoanHistory.svelte  NftBalance.svelte  PayLoan.svelte  WithdrawAsset.svelte  WithdrawNft.svelte
src/pages/: AuctionHistory.svelte  AuctionInfo.svelte  Loan.svelte  LoanInfo.svelte  Vault.svelte
